--- a/views/user/chat/chat.twig
+++ b/views/user/chat/chat.twig
@@ -1136,7 +1136,7 @@
             });
         }
 
-        const ws = new WebSocket('ws://localhost:8000');
+        const ws = new WebSocket('wss://dev.techneketax.com/ws/');
         ws.onopen = function() {
             console.log('WebSocket connection established');
         };
