--- a/views/user/chat/user_chat.twig
+++ b/views/user/chat/user_chat.twig
@@ -1183,7 +1183,7 @@
             const userProfileImage = "{{ userProfileImage }}"
                 ? "{{ env.APP_URL }}uploads/profile/{{ userProfileImage }}"
                 : "https://avatar.iran.liara.run/username?username={{ loginName }}";
-            const wsUrl = 'ws://localhost:8000';
+            const wsUrl = 'wss://dev.techneketax.com/ws/';
             let ws;
             function initializeWebSocket() {
                 try {
