--- a/views/user/chat/chat.twig
+++ b/views/user/chat/chat.twig
@@ -20,7 +20,7 @@
                     <!--begin::Secondary button-->
                     <!--end::Secondary button-->
                     <!--begin::Primary button-->
-                    <a href="/create" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_create_app">Create</a>
+{#                    <a href="/create" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_create_app">Create</a>#}
                     <!--end::Primary button-->
                 </div>
                 <!--end::Actions-->
@@ -31,7 +31,7 @@
         <!--begin::Post-->
         <div class="post d-flex flex-column-fluid" id="kt_post">
             <!--begin::Container-->
-            <div id="kt_content_container" class="container-xxl">
+            <div id="kt_content_container" class="container-fluid">
                 <!--begin::Layout-->
                 <div class="d-flex flex-column flex-lg-row">
                     <!--begin::Sidebar-->
