--- a/views/user/document_hub/files.twig
+++ b/views/user/document_hub/files.twig
@@ -41,7 +41,7 @@
         <!--begin::Post-->
         <div class="post d-flex flex-column-fluid" id="kt_post">
             <!--begin::Container-->
-            <div id="kt_content_container" class="container-xxl">
+            <div id="kt_content_container" class="container-fluid">
                 <!--begin::Card-->
                 <div class="card card-flush pb-0 bgi-position-y-center bgi-no-repeat mb-10">
                     <!--begin::Card header-->
