--- a/views/user/includes/sidebar.twig
+++ b/views/user/includes/sidebar.twig
@@ -133,33 +133,48 @@
                     </a>
                 </div>
                 {% if loginType == "firm" or loginType == "member" %}
-                <div class="menu-item">
-                    <a class="menu-link {% if route == '/user/document' %}active{% endif %}" href="/user/document">
+                    <div data-kt-menu-trigger="click" class="menu-item {% if route == '/user/document' or route == '/user/files'  or route == '/user/upload/document/all'  %} here show {% endif %} menu-accordion">
+									<span class="menu-link">
 										<span class="menu-icon">
-											<!--begin::Svg Icon | path: icons/duotune/general/gen014.svg-->
+											<!--begin::Svg Icon | path: icons/duotune/ecommerce/ecm007.svg-->
 											<span class="svg-icon svg-icon-2">
-												                            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-
-											</span>
+										<!--begin::Svg Icon | path: assets/media/icons/duotune/communication/com014.svg-->
+<span class="svg-icon svg-icon-muted svg-icon-1x"><svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
+</span>
+                                                <!--end::Svg Icon-->
+                                            </span>
                                             <!--end::Svg Icon-->
 										</span>
-                        <span class="menu-title">Document Hub</span>
-                    </a>
-                </div>
-                    <div class="menu-item">
-                        <a class="menu-link {% if route == '/user/upload/document/all' %}active{% endif %}" href="/user/upload/document/all">
-										<span class="menu-icon">
-											<!--begin::Svg Icon | path: icons/duotune/general/gen014.svg-->
-											<span class="svg-icon svg-icon-2">
-											                            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-
-											</span>
-                                            <!--end::Svg Icon-->
-										</span>
-                            <span class="menu-title">Uploaded Documents</span>
-                        </a>
+										<span class="menu-title">Document Hub</span>
+										<span class="menu-arrow"></span>
+									</span>
+                        <div class="menu-sub menu-sub-accordion menu-active-bg">
+                            <div class="menu-item">
+                                <a class="menu-link {% if route == '/user/document' %}active{% endif %}" href="/user/document">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
+                                    <span class="menu-title">Document Hub</span>
+                                </a>
+                            </div>
+                            <div class="menu-item">
+                                <a class="menu-link {% if route == '/user/upload/document/all' %}active{% endif %}" href="/user/upload/document/all">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
+                                    <span class="menu-title">Resources</span>
+                                </a>
+                            </div>
+                            <div class="menu-item">
+                                <a class="menu-link {% if route == '/user/files' %}active{% endif %}" href="/user/files">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
+                                    <span class="menu-title">File Manager</span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-
                 {% endif %}
                 {% if loginType == "firm" or loginType == "member" %}
                 <div data-kt-menu-trigger="click" class="menu-item {% if route == '/user/invoices' or route == '/user/invoice/add'  %} here show {% endif %} menu-accordion">
