set filemanger table

--- a/views/user/document_hub/files.twig
+++ b/views/user/document_hub/files.twig
@@ -98,6 +98,7 @@
                         </div>
                         <!--end::Table header-->
                         <!--begin::Table-->
+                        <div class="table-responsive">
                         <table id="kt_file_manager_list" data-kt-filemanager-table="folders" class="table align-middle table-row-dashed fs-6 gy-5">
                             <!--begin::Table head-->
                             <thead>
@@ -201,7 +202,8 @@
                             </tbody>
                             <!--end::Table body-->
                         </table>
-                        <!--end::Table-->
+                        </div>
+                            <!--end::Table-->
                     </div>
                     <!--end::Card body-->
                 </div>
