--- a/views/user/document_hub/files.twig
+++ b/views/user/document_hub/files.twig
@@ -66,7 +66,7 @@
                             <!-- Right side button -->
                             <div class="d-flex flex-column ml-auto" data-kt-filemanager-table-toolbar="base">
                                 <!--begin::Add customer-->
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_upload">
+                                <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#kt_modal_upload">
                                     <!--begin::Svg Icon | path: icons/duotune/files/fil018.svg-->
                                     <span class="svg-icon svg-icon-2">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -75,7 +75,7 @@
                                         <path opacity="0.3" d="M11 11.6V17C11 17.6 11.4 18 12 18C12.6 18 13 17.6 13 17V11.6H11Z" fill="currentColor" />
                                     </svg>
                                 </span>
-                                    <!--end::Svg Icon-->Upload Files
+                                    <!--end::Svg Icon-->Upload
                                 </button>
                                 <!--end::Add customer-->
                             </div>
@@ -161,7 +161,6 @@
                                     </td>
                                     <!--end::Name-->
                                     <!--begin::File Info-->
-                                    <td>{{ file.type }}</td>
                                     <td>{{ file.size }}</td>
                                     <!--end::File Info-->
                                     <!--begin::Actions-->
