--- a/views/user/document_hub/files.twig
+++ b/views/user/document_hub/files.twig
@@ -55,7 +55,7 @@
                                 <!--end::Icon-->
                                 <!--begin::Title-->
                                 <div class="d-flex flex-column">
-                                    <h2 class="mb-1">File Manager</h2>
+                                    <h4 class="mb-1">File Manager</h4>
                                     <div class="text-muted fw-bolder">
                                         <a href="#">{{ company_name }}</a>
                                         <span class="mx-3">|</span>
@@ -64,21 +64,26 @@
                                 <!--end::Title-->
                             </div>
                             <!-- Right side button -->
-                            <div class="d-flex flex-column ml-auto" data-kt-filemanager-table-toolbar="base">
-                                <!--begin::Add customer-->
-                                <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#kt_modal_upload">
-                                    <!--begin::Svg Icon | path: icons/duotune/files/fil018.svg-->
-                                    <span class="svg-icon svg-icon-2">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <div class="d-flex align-items-center ml-auto" data-kt-filemanager-table-toolbar="base">
+                                <!--begin::Upload button-->
+                                <button type="button" class="btn btn-dark btn-xs me-2" data-bs-toggle="modal" data-bs-target="#kt_modal_upload">
+                                <span class="svg-icon svg-icon-1">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none">
                                         <path opacity="0.3" d="M10 4H21C21.6 4 22 4.4 22 5V7H10V4Z" fill="currentColor" />
                                         <path d="M10.4 3.60001L12 6H21C21.6 6 22 6.4 22 7V19C22 19.6 21.6 20 21 20H3C2.4 20 2 19.6 2 19V4C2 3.4 2.4 3 3 3H9.20001C9.70001 3 10.2 3.20001 10.4 3.60001ZM16 11.6L12.7 8.29999C12.3 7.89999 11.7 7.89999 11.3 8.29999L8 11.6H11V17C11 17.6 11.4 18 12 18C12.6 18 13 17.6 13 17V11.6H16Z" fill="currentColor" />
                                         <path opacity="0.3" d="M11 11.6V17C11 17.6 11.4 18 12 18C12.6 18 13 17.6 13 17V11.6H11Z" fill="currentColor" />
                                     </svg>
                                 </span>
-                                    <!--end::Svg Icon-->Upload
+                                    Upload
                                 </button>
-                                <!--end::Add customer-->
+                                <!--end::Upload button-->
+                                <!--begin::Delete button-->
+                                <button id="all-del" type="button" class="btn btn-primary btn-xs">
+                                    <i class="bi bi-trash-fill"></i>
+                                </button>
+                                <!--end::Delete button-->
                             </div>
+
                         </div>
                     </div>
                     <!--end::Card header-->
@@ -104,11 +109,12 @@
                             <thead>
                             <!--begin::Table row-->
                             <tr class="text-start text-gray-400 fw-bolder fs-7 text-uppercase gs-0">
-{#                                <th class="w-10px pe-2">#}
+                                <th class="w-10px pe-2">
+                                    -
 {#                                    <div class="form-check form-check-sm form-check-custom form-check-solid me-3">#}
-{#                                        <input class="form-check-input" type="checkbox" data-kt-check="true" data-kt-check-target="#kt_file_manager_list .form-check-input" value="1" />#}
+{#                                        <input class="form-check-input" type="checkbox" data-kt-check="true" data-kt-check-target="#kt_file_manager_list .form-check-input" />#}
 {#                                    </div>#}
-{#                                </th>#}
+                                </th>
                                 <th class="min-w-250px">Name</th>
                                 <th>Size</th>
                                 <th class="w-125px"></th>
@@ -121,9 +127,9 @@
                             {% for file in files %}
                                 <tr>
                                     <!--begin::Checkbox-->
-                                    <td style="display: none">
+                                    <td >
                                         <div class="form-check form-check-sm form-check-custom form-check-solid">
-                                            <input class="form-check-input" type="checkbox" value="{{ loop.index }}" />
+                                            <input class="form-check-input" type="checkbox" value="{{ file.path }}" />
                                         </div>
                                     </td>
                                     <!--end::Checkbox-->
@@ -341,6 +347,40 @@
                 });
             }
         });
+
+        document.getElementById('all-del').addEventListener('click', function () {
+            let checkedBoxes = document.querySelectorAll('#kt_file_manager_list .form-check-input:checked');
+            let filePaths = [];
+            checkedBoxes.forEach(function (checkbox) {
+                filePaths.push(checkbox.value);
+            });
+            if (filePaths.length > 0) {
+                if (confirm("Are you sure you want to delete the selected files?")) {
+                    fetch('/user/file/del-all', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({ filePaths: filePaths })
+                    })
+                        .then(response => response.json())
+                        .then(data => {
+                            if (data.status === 'success') {
+                                location.reload();
+                            } else {
+                                alert('An error occurred while deleting records.');
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error:', error);
+                            alert('An unexpected error occurred.');
+                        });
+                }
+            } else {
+                alert('Please select at least one file to delete.');
+            }
+        });
+
 
     </script>
 {% endblock %}
